src/objects/ADvendio__AdServerTeamAssignment__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AdServer Team Assignments</relationshipLabel>
        <relationshipName>AdServer_Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdServer ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ADvendio__AdServer_ID__c.ADvendio__Type__c</field>
                <operation>equals</operation>
                <value>Team</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>AdServer Team Assignments</relationshipLabel>
        <relationshipName>AdServerTeamAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipLabel>AdServer Team Assignments</relationshipLabel>
        <relationshipName>AdServerTeamAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AdServer Team Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>ADvendio__Account__c</columns>
        <columns>ADvendio__MediaCampaign__c</columns>
        <columns>ADvendio__AdServerID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>thun</fullName>
        <columns>ADvendio__Account__c</columns>
        <columns>ADvendio__MediaCampaign__c</columns>
        <columns>ADvendio__AdServerID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>thun</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>AdServerTeamAssignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdServer Team Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>